--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://andresdeinnocentiis.github.io/entrega04_reactjs",
+  "homepage": "https://andresdeinnocentiis.github.io/entrega04_reactjs/",
   "name": "app_de_innocentiis",
   "version": "0.1.0",
   "private": true,
